@@ -26,6 +26,7 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
 - bug #2356433 [display] HeaderFlipType "fake" problems,
   thanks to Michal Biniek
 - bug #2363919 [display] Incorrect size for view 
+- bug #2121287 [display] Drop-down menu blinking in FF 
 
 3.1.0.0 (2008-11-28)
 + [auth] Support for Swekey hardware authentication,
